# uavbenchmark

./: .env.example  .gitignore  AxL责任定义字典_17A_68单元_机读版.md  JD业务变量字典_66槽位_机读版.md  JD业务变量树_version1.html  JD业务变量树_version2.html  README.md  jd-variable-tree.html  metric.md  pipeline-v2.html  pipeline.html  pyproject.toml  白墙.md
docs/: README.md  codebase_guide.md  config_agent_quickstart.md  document_cleanup_proposal.md  how_to_create_case_template.md  jd_4layer_pattern.md  jd_variable_catalog_v2.md  pipeline_delivery_audit.md  pipeline_delivery_plan.md  pipeline_ui_walkthrough.md  update_notice_ga_renumbering.md  variable_tree_case_task.md
knowledge/: agent_reference_catalog.json  axl_responsibility_catalog.json  business_scenario_registry.json  case_white_wall_narrow_gap.json  catalog_build_report.json  jd_dictionary.json  jd_variable_tree_a11_control_draft.json  jd_variable_tree_a5_a6a_a6b_a7.json  jd_variable_tree_a5_a6a_a6b_a7.yaml  jd_variable_tree_a8_resource_management_draft.json  jd_variable_tree_a8_v0_6_draft.json  jd_variable_tree_a9_resource_management_draft.json  jd_variable_tree_g1_a1_a5_draft.json  jd_variable_tree_g2_g3_renumbered_draft.json  jd_variable_tree_global_draft.json  jd_variable_tree_legacy_inspection_source.json  jd_variable_tree_legacy_white_wall_v0_6.json  jd_variable_tree_version1.json  jd_variable_tree_version2.json  legacy_id_mapping.json  metric_set_a10_default.json  metric_set_a11_default.json  metric_set_a11_strict.json  metric_set_a12_default.json  metric_set_a13_default.json  metric_set_a14_default.json  metric_set_a15_default.json  metric_set_a16_default.json  metric_set_a17_default.json  metric_set_a1_default.json  metric_set_default.json  (+9 more)
(+104 files in other folders)
