[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-benchmark"
version = "0.1.0"
description = "Reproducible machine contracts and mock pipeline for UAV benchmark tasks"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.16,<5",
  "PyYAML>=6,<7",
]

[project.scripts]
uav-benchmark-template = "uav_benchmark.compiler.cli:main"
uav-benchmark-agent = "uav_benchmark.agent.server:main"

[project.optional-dependencies]
test = [
  "pytest>=7,<9",
]
agent = [
  "google-genai>=2.11,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
