[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-benchmark"
version = "0.1.0"
description = "Reproducible machine contracts and mock pipeline for UAV benchmark tasks"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.16,<5",
  "PyYAML>=6,<7",
  'eval_type_backport; python_version < "3.10"',
]

[project.scripts]
uav-benchmark-template = "uav_benchmark.compiler.cli:main"
uav-benchmark-agent = "uav_benchmark.agent.server:main"
uav-benchmark-instance = "uav_benchmark.instance.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=7,<9",
]
agent = [
  "openai>=1.40,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
